# crafty_legend

./: .gitignore  CMakeLists.txt  README.md
data/CraftyLegend/: currencies.json  items.json  legendaries.json  recipes.json
docs/: bifrost_crafting_tree.md
scripts/: add_gen2_mf_recipes.py  embed_json.py  fetch_gen1_recipes.py  fetch_gen2_recipes.py  fetch_gen3_recipes.py  fix_bindings.py  gen_anvil_icon.py  generate_anvil_icon.py  generate_icon_data.sh  populate_icons.py  verify_gen3_ids.py
src/: DataManager.cpp  DataManager.h  GW2API.cpp  GW2API.h  IconManager.cpp  IconManager.h  dllmain_hotkey.cpp  embedded_data.h
